Changelog
=========

1.26 - Unreleased
-----------------

* Fixed branch option for git 1.6.0 until and including 1.6.2.
  Fixes issue #117.
  [maurits]

* Skip update of symlinked sources.
  [chaoflow (Florian Friesdorf)]

* Deprecate ``-n`` and ``--dry-run`` on ``rebuild`` command in favour of the
  new ``arguments`` command.

1.25 - 2013-03-15
-----------------

* Git submodules support.
  [sunbit]

* Added `newest_tag` option for mercurial and cvs.
  [kkujawinski, fschulze]

* Python 3 fixes.
  [fschulze, jajadinimueter (Florian Mueller)]

* Fix revision pinning. Refs #113
  [do3cc (Patrick Gerken)]

* Properly line up the output of ``status``.
  [fschulze]

1.24 - 2013-01-29
-----------------

* Mercurial now switches branches.
  [bubenkoff (Anatoly Bubenkov), fschulze]

* Fix gitsvn/gitify working copy type which was broken since 1.22.
  [rpatterson (Ross Patterson)]

* Fix deactivate command which was broken since 1.22. Refs #105
  [fschulze, icemac]

1.23 - 2012-11-28
-----------------

* Unit tests run with Python 2.4, 2.5, 2.6, 2.7 and 3.2 now.
  [fschulze]

* Officially added source rewrites. Refs #56
  [fschulze]

* Add additional optional config file ``.mr.developer-options.cfg`` which is
  read from the buildout directory for local version controllable options.
  [fschulze]

* Update all activated packages during buildout if ``always-checkout`` is true
  instead of only the ones in the ``auto-checkout`` list or with the ``update``
  option set. Refs #95
  [fschulze]

* Fix asking for password for svn with basic authentication. Refs #100
  [MordicusEtCubitus]

* Fixed regressions in svn module. Refs #37
  [fschulze, evilbungle (Alan Hoey)]

* Fixed branch checkout for git on Python 3.
  [mitchellrj]

* Fixed subversion checkout on Python 3.
  [mitchellrj]

1.22 - 2012-10-13
-----------------

* If you set threads to 1, then we don't use any separate thread anymore, the
  actions are now done in the main thread.
  [fschulze]
